[package]
name = "rawbson"
version = "0.1.0"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
edition = "2018"

[[bench]]
name = "rawbson"
harness = false
edition = "2018"

[dependencies]
bson = {version = "1.1", features = ["decimal128"] }
chrono = { version = "0.4", features = ["serde"] }
proptest = "0.10"
decimal = "2.0.4"
serde = { version = "1.0.118", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.0"
