[package]
name = "rawbson"
version = "0.1.1"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
description = "Blazing fast zero-copy BSON handling"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jcdyer/rawbson"
repository = "https://github.com/jcdyer/rawbson"
documentation = "https://docs.rs/crate/rawbson"
edition = "2018"
keywords = ["serde", "bson", "mongodb", "serialization"]

[[bench]]
name = "rawbson"
harness = false
edition = "2018"

[dependencies]
bson = {version = "1.1", features = ["decimal128"] }
chrono = { version = "0.4", features = ["serde"] }
proptest = "0.10"
decimal = "2.0.4"
serde = { version = "1.0.118", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.0"
